--- a/_includes/page/about.html
+++ b/_includes/page/about.html
@@ -1,8 +1,8 @@
 <div class="about">
-<div class="about__devider">*****</div>
+<div class="about__devider">... ...</div>
 <div class="about__text">
-<strong> Non sunt multiplicanda entia sine necessitate </strong>
-<br>☕ Pudhina theme by Knhash 🛠️
-<br> You can change this text in _includes/page/about.html
+<strong> 山中有怪喜山吹  挂白悬停涧间水 </strong>
+<br>山怪的小墙
+<br> 小哥哥 小姐姐一起来玩呀
 </div>
 </div>
