--- a/_layouts/self.html
+++ b/_layouts/self.html
@@ -3,6 +3,8 @@ layout: default
 ---
 {% include self/title.html %}
 
+<div>{{ page.liziyue }}</div>
+
 {{ content }}
 
 {% include self/about.html %}
