--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
     font-family: 'Quicksand', sans-serif;  
     font-size: 100%;
     color: #012;
-    background-color: #FFF; }
+    background-color: rgb(221, 83, 83); }
 
   a {
     color: #57A;
