--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
     font-family: 'Quicksand', sans-serif;  
     font-size: 100%;
     color: #012;
-    background-color: rgb(69, 85, 75); }
+    background-color: hsl(19, 70%, 71%); }
 
   a {
     color: #57A;
